// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkChip should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with "disabled" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(178, 174, 189)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with "selected" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(0, 178, 214)",
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": undefined,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
    testID="123"
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should support theming when selected 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(0, 178, 214)",
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Object {
            "fontFamily": "System",
          },
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "#4B5458",
            },
            Object {
              "color": "yellow",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;
